Add in ability to split coins
Moved distributeCoins to static method in helper so both code paths went through the same code
Made adjustments to the distributeCoins method so it works properly
Added button to split coins
Added owner check for the manage currency button

--- a/template/npc-sheet.hbs
+++ b/template/npc-sheet.hbs
@@ -294,16 +294,17 @@
         >
           <dnd5e-inventory class="inventory-element" v2="">
             <section class="currency {{@root.editable}}">
-              <button
-                type="button"
-                class="item-action unbutton"
-                data-action="currency"
-                data-tooltip="DND5E.CurrencyManager.Title"
-                aria-label="Manage Currency"
-              >
-                <i class="fas fa-coins"></i>
-              </button>
-
+              {{#if @root.owner}}
+                <button
+                  type="button"
+                  class="item-action unbutton"
+                  data-action="currency"
+                  data-tooltip="DND5E.CurrencyManager.Title"
+                  aria-label="Manage Currency"
+                >
+                  <i class="fas fa-coins"></i>
+                </button>
+              {{/if}}
               {{#each system.currency}}
               <label aria-label="{{ lookup (lookup @root.config.currencies @key) 'label' }}">
                 <i
@@ -321,6 +322,14 @@
                 />
               </label>
               {{/each}} {{#ifeq lootsheettype "Loot"}} {{#if lootCurrency}}
+              <button
+                type="button"
+                class="item-action unbutton split-coins"
+                data-tooltip="Split Coins"
+                aria-label="Split Coins"
+              >
+                <i class="fas fa-coins"></i>
+              </button>
               <button
                 type="button"
                 class="item-action unbutton currency-loot"
