--- a/template/npc-sheet.hbs
+++ b/template/npc-sheet.hbs
@@ -571,6 +571,269 @@
           </dnd5e-inventory>
         </div>
 
+        {{!-- {{#ifeq @root.lootsheettype "Merchant"}} --}}
+        <div
+          class="tab sell active {{@root.editable}}"
+          data-group="primary"
+          data-tab="playerInventory"
+        >
+        This is a test
+          {{!-- <dnd5e-inventory class="inventory-element" v2="">
+            <section class="currency {{@root.editable}}">
+
+              {{#each system.currency}}
+              <label aria-label="{{ lookup (lookup @root.config.currencies @key) 'label' }}">
+                <i
+                  class="currency {{ @key }}"
+                  data-tooltip="{{ lookup (lookup @root.config.currencies @key) 'label' }}"
+                ></i>
+                <input
+                  type="text"
+                  class="currency uninput"
+                  name="system.currency.{{ @key }}"
+                  value="{{ this }}"
+                  data-dtype="Number"
+                  inputmode="numeric"
+                  pattern="[0-9+=\-]*"
+                />
+              </label>
+              {{/each}}
+            </section>
+
+            <div class="middle {{@root.editable}}">
+              {{!-- Searching & Filtering --}}
+              <item-list-controls
+                for="inventory"
+                label="{{ localize 'DND5E.InventorySearch' }}"
+                sort="toggle"
+                collection="items"
+              >
+              </item-list-controls>
+            </div>
+
+            {{!-- Player Item List --}}
+            <section class="items-list inventory-list" data-item-list="inventory">
+              {{!-- Sections / Categories --}}
+              {{#each playerItems as |
+              section |}}
+              <div class="items-section card" {{ dnd5e-dataset dataset }}>
+                {{!-- Section Header --}}
+                <div class="items-header header">
+                  <h3 class="item-name">{{ localize section.label }}</h3>
+
+                  <div class="item-header item-weight">
+                    {{ localize "DND5E.Weight" }}
+                  </div>
+                  <div class="item-header item-quantity">
+                    {{ localize "DND5E.Quantity" }}
+                  </div>
+                  <div class="item-header item-price">
+                    {{ localize "DND5E.Price" }}
+                  </div>
+
+                  <div class="item-header item-controls"></div>
+                </div>
+
+                {{!-- Section Contents --}}
+                <ol class="item-list unlist">
+                  {{#each items as |item|}}
+                  {{#dnd5e-itemContext item as |ctx|}}
+
+                  {{!-- Items --}}
+                  <li
+                    class="item collapsible {{#unless ctx.isExpanded}}collapsed{{/unless}}"
+                    data-item-id="{{ item.id }}"
+                    data-entry-id="{{ item.id }}"
+                    data-item-name="{{ item.name }}"
+                    data-item-sort="{{ item.sort }}"
+                    data-ungrouped="all"
+                    data-grouped="{{ item.type }}"
+                  >
+                    <div class="item-row">
+                      {{!-- Item Name --}}
+                      <div
+                        class="item-name item-action item-tooltip {{ @root.rollableClass }}"
+                        role="button"
+                        data-action="edit"
+                        aria-label="{{ item.name }}"
+                      >
+                        <img
+                          class="item-image gold-icon"
+                          src="{{ item.img }}"
+                          alt="{{ item.name }}"
+                        />
+                        <div class="name name-stacked">
+                          <span class="title">{{ item.name }}</span>
+                          {{#if ctx.subtitle}}
+                          <span class="subtitle">{{{ ctx.subtitle }}}</span>
+                          {{/if}}
+                        </div>
+                      </div>
+
+                      {{!-- Item Weight --}}
+                      <div
+                        class="item-detail item-weight {{#unless ctx.totalWeight}}empty{{/unless}}"
+                      >
+                        {{#if ctx.totalWeight}}
+                        <i class="fas fa-weight-hanging"></i> {{ ctx.totalWeight }} {{/if}}
+                      </div>
+
+                      {{!-- Item Quantity --}}
+                      <div class="item-detail item-quantity">
+                         {{#notequal item.type "container"}}
+                        <a
+                          class="adjustment-button"
+                          data-action="decrease"
+                          data-property="system.quantity"
+                        >
+                          <i class="fas fa-minus"></i>
+                        </a>
+                        {{/notequal}} 
+                        {{#notequal item.type "container"}}
+                        <input
+                          type="text"
+                          value="{{ item.system.quantity }}"
+                          placeholder="0"
+                          data-dtype="Number"
+                          data-name="system.quantity"
+                          inputmode="numeric"
+                          pattern="[0-9+=\-]*"
+                          min="0"
+                        />
+                        {{else}}
+                        <div class="item-detail">{{ item.system.quantity }}</div>
+                        {{/notequal}}
+                        {{#notequal item.type "container"}}
+                        <a
+                          class="adjustment-button"
+                          data-action="increase"
+                          data-property="system.quantity"
+                        >
+                          <i class="fas fa-plus"></i>
+                        </a>
+                        {{/notequal}}
+                      </div>
+
+                      {{!-- Item Price --}}
+                      <div
+                        class="item-detail item-price {{#unless item.system.price.value}}empty{{/unless}}"
+                      >
+                        {{#if item.system.price.value}}
+                        {{ lootsheetprice item.system.price.value ../../priceModifier }}
+                        <i class="currency {{ item.system.price.denomination }}"></i>
+                        {{/if}}
+                      </div>
+
+                      {{!-- Item Status --}}
+                      <div class="item-detail item-controls">
+                        {{#if @root.editable}}
+                        {{!-- Editing --}}
+                        <a
+                          class="item-control item-action"
+                          data-action="edit"
+                          data-tooltip="DND5E.ItemEdit"
+                          aria-label="{{ localize 'DND5E.ItemEdit' }}"
+                        >
+                          <i class="fas fa-pen-to-square"></i>
+                        </a>
+
+                        {{!-- Deleting --}}
+                        <a
+                          class="item-control item-action"
+                          data-action="delete"
+                          data-tooltip="DND5E.ItemDelete"
+                          aria-label="{{ localize 'DND5E.ItemDelete' }}"
+                        >
+                          <i class="fas fa-trash"></i>
+                        </a>
+                        {{/if}}
+
+                        {{!-- Expand/Collapse --}}
+                        <a
+                          class="item-control interface-only"
+                          data-toggle-description
+                          aria-label="{{ localize 'DND5E.ToggleDescription' }}"
+                        >
+                          {{#if ctx.isExpanded}}
+                          <i class="fas fa-compress"></i>
+                          {{else}}
+                          <i class="fas fa-expand"></i>
+                          {{/if}}
+                        </a>
+
+                        {{#ifnot @root.editable}}
+                        {{#ifeq ../../lootsheettype "Loot"}}
+                        <a
+                          class="item-control item-lootall item-action"
+                          title="{{localize 'LOOTSHEET.LootStack'}}"
+                          ><i class="far fa-gem"></i
+                        ></a>
+                        <a
+                          class="item-control item-loot item-action"
+                          title="{{localize 'LOOTSHEET.Loot'}}"
+                          ><i class="fas fa-gem"></i
+                        ></a>
+                        {{/ifeq}}
+
+                        {{#ifeq ../../lootsheettype "Merchant"}}
+                        <a
+                          class="item-control item-buyall item-action"
+                          title="{{localize 'LOOTSHEET.BuyStack'}}"
+                          ><i class="fas fa-coins"></i
+                        ></a>
+                        <a
+                          class="item-control item-buy item-action"
+                          title="{{localize 'LOOTSHEET.Buy'}}"
+                          ><i class="fas fa-dollar-sign"></i
+                        ></a>
+                        {{/ifeq}}
+                        {{/ifnot}}
+
+                        {{!-- Context Menu --}}
+                        <a
+                          class="item-control interface-only"
+                          data-context-menu
+                          aria-label="{{ localize 'DND5E.AdditionalControls' }}"
+                        >
+                          <i class="fas fa-ellipsis-vertical"></i>
+                        </a>
+                      </div>
+                    </div>
+
+                    <div class="item-description collapsible-content">
+                      <div class="wrapper">
+                        {{#if ctx.isExpanded}}
+                        {{> "dnd5e.item-summary" ctx.expanded }}
+                        {{/if}}
+                      </div>
+                    </div>
+                  </li>
+                  {{/dnd5e-itemContext}}
+                  {{/each}}
+                </ol>
+              </div>
+              {{/each}}
+            </section>
+
+            {{#if @root.owner}}
+            <div class="bottom">
+              {{!-- Encumbrance --}}
+              <div class="encumbrance"></div>
+
+              {{!-- Child Creation --}}
+              <button
+                type="button"
+                class="create-child gold-button"
+                aria-label="{{ 'SIDEBAR.Create' type=(localize 'DOCUMENT.Item') }}"
+              >
+                <i class="fas fa-plus"></i>
+              </button>
+            </div>
+            {{/if}}
+          </dnd5e-inventory> --}}
+        </div>
+        {{!-- {{/ifeq}} --}}
+
         <div class="tab biography {{@root.editable}}" data-group="primary" data-tab="biography">
           {{#if editingDescriptionTarget}}
 
